PiAtMaster/hass/stripPrefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripPrefix
spec:
  stripPrefix:
    prefixes:
      - "/appdaemon"
      - "/dashboard"
    forceSlash: true
